[gd_scene load_steps=13 format=3 uid="uid://cxd4y8qg56hq3"]

[ext_resource type="Script" path="res://ui/combat/shared/unit_inventory_slot/unit_inventory_slot.gd" id="1_kpyca"]
[ext_resource type="FontFile" uid="uid://b63aolstq2o3t" path="res://resources/fonts/CrimsonText-Regular.ttf" id="1_mnk0y"]
[ext_resource type="Theme" uid="uid://spqlmvt5day1" path="res://resources/themes/combat/unit_action_inventory/unit_action_inventory_enabled.tres" id="1_t3uh7"]
[ext_resource type="PackedScene" uid="uid://diqrf4hmvqdtg" path="res://ui/combat/shared/unit_inventory_slot/inventory_item_icon/InventoryItemIcon.tscn" id="3_11e7w"]
[ext_resource type="Theme" uid="uid://c721m7lwm7mq3" path="res://ui/combat/shared/unit_inventory_slot/inventory_slot_theme.tres" id="3_nmnge"]
[ext_resource type="Theme" uid="uid://basxgfcidqdr7" path="res://resources/themes/combat/default_ui_theme.tres" id="4_3ax6y"]
[ext_resource type="Texture2D" uid="uid://c05dp35likkjs" path="res://resources/sprites/icons/weapon_icons/sword_icon.png" id="4_cd7yo"]

[sub_resource type="Theme" id="Theme_hxiho"]
default_font_size = 24

[sub_resource type="Theme" id="Theme_nkl5n"]
default_font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55rkq"]
bg_color = Color(9.32533e-08, 0.144987, 0.114366, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.392157, 1, 0.737255, 1)
border_blend = true
shadow_color = Color(0.392157, 1, 0.737255, 1)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fyniy"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="Theme" id="Theme_3w7h2"]
Button/fonts/font = ExtResource("1_mnk0y")
Button/styles/hover = SubResource("StyleBoxFlat_55rkq")
Button/styles/normal = SubResource("StyleBoxFlat_fyniy")

[node name="UnitInventorySlot" type="Button"]
custom_minimum_size = Vector2(290, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -990.0
offset_bottom = -670.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_t3uh7")
script = ExtResource("1_kpyca")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(290, 50)
layout_mode = 0
offset_right = 289.0
offset_bottom = 50.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(270, 32)
layout_mode = 2
focus_mode = 2

[node name="LeftContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="InventoryItemIcon" parent="MarginContainer/HBoxContainer/LeftContainer" instance=ExtResource("3_11e7w")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2

[node name="ItemNameLabel" type="Label" parent="MarginContainer/HBoxContainer/LeftContainer"]
layout_mode = 2
theme = SubResource("Theme_hxiho")
text = "Item Name"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/LeftContainer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_cd7yo")
stretch_mode = 2

[node name="UsesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_nkl5n")
text = "30"

[node name="InfoMargin" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
offset_right = 270.0
offset_bottom = 40.0
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="Uses" type="Label" parent="InfoMargin"]
layout_mode = 2
theme = ExtResource("3_nmnge")
theme_override_font_sizes/font_size = 18
text = "46"
horizontal_alignment = 2
vertical_alignment = 1

[node name="OptionsContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 213.0
offset_top = -19.0
offset_right = 348.0
offset_bottom = 65.0
theme = ExtResource("4_3ax6y")
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="OptionsContainer"]
layout_mode = 2
theme = ExtResource("4_3ax6y")

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/Panel"]
layout_mode = 2
offset_right = 125.0
offset_bottom = 72.0

[node name="Button1" type="Button" parent="OptionsContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_3w7h2")
text = "Action"

[node name="Button2" type="Button" parent="OptionsContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_3w7h2")
text = "Discard"

[connection signal="mouse_entered" from="OptionsContainer/Panel/VBoxContainer/Button1" to="." method="mouse_entered"]
[connection signal="mouse_entered" from="OptionsContainer/Panel/VBoxContainer/Button2" to="." method="mouse_entered"]
